feat(release): adding notebook

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Get Inflation Dev Container",
+  "name": "Housing prices Dev Container",
   "build": {
     "dockerfile": "Dockerfile",
     "context": ".."
